Updated env requirements.

--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -1,15 +1,15 @@
 dill
 rdflib
 networkx
-sklearn
+scikit-learn==0.19.2
 numpy
-scipy
+scipy==1.2.1
 nltk
 datrie
 decorator
 pandas
 tensorflow==1.4
-keras
+keras==2.1.5
 h5py
 bayesian-optimization
 hyperopt
